--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,3 +10,8 @@ html {
 
 /* Write your solution here */
 
+@media only screen and (max-width: 1090px) and (min-width: 460px) {
+  #monkey {
+    top: 10px;
+  }
+}
